--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta property="og:image" href="%PUBLIC_URL%/sharing.png">
+    <meta property="og:image" content="%PUBLIC_URL%/sharing.png">
     <link rel="icon" href="%PUBLIC_URL%/icon.png">
     <!--
       manifest.json provides metadata used when your web app is installed on a
